--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,12 @@
         <a href="/">Just Tech News</a>
       </h1>
       <nav>
+        {{#if loggedIn}}
         <button id="logout" class="btn-no-style">logout</button>
-          <a href="/login">login</a>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
       </nav>
-
     </header>
     <main>
       {{{ body }}}
@@ -27,7 +29,10 @@
       Thanks for visiting!
     </footer>
   </div>
-<script src="/javascript/logout.js"></script>
+  
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
